# centaur-acme

./: README.md  pyproject.toml
.agents/skills/acme-support/: SKILL.md
.agents/skills/agent-memory/: SKILL.md
services/sandbox/: SYSTEM_PROMPT.md
tests/: test_acme_crm.py  test_agent_memory.py
tools/acme_crm/: cli.py  client.py  pyproject.toml
tools/acme_go/: go.mod  main.go
tools/acme_rust/: Cargo.toml
tools/acme_rust/src/: main.rs
workflows/: _agent_memory.py  example_memory_agent.py  nightly_agent_memory.py
